<resources>
    <string name="app_name">ZOOFT</string>
    <string name="qr">Escanea código QR</string>
    <string name="loc">Localizar</string>
    <string name="exit">Salir</string>
    <string name="copyright">COPYRIGHT - 2021</string>
    <string name="diseño">Diseñado por:</string>
    <string name="autor">ANGELLO TORRES DE LA TORRE</string>
    <string name="confirmacionSalirAPP">¿Desea salir de la aplicación?</string>
    <string name="confirmacionIncidencia">¿Desea enviar la incidencia?</string>
    <string name="incidenciaGenerada">Incidencia Generada</string>
    <string name="mensajeExcepcion">Mensaje de Excepción</string>
    <string name="animalNoEncontrado">Animal no encontrado</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="quien">¿QUIÉN ES?</string>
    <string name="costumbres">¿CUÁLES SON SUS CONSTUMBRES?</string>
    <string name="sabias">SABÍAS QUE…</string>
    <string name="bisonte">BISONTE EUROPEO</string>
    <string name="bisonteQuien">Este bisonte es el mamífero de mayor tamaño existente en Europa, y se le parece mucho a su pariente americano, si bien es presenta una constitución más ligera (además de carecer de joroba). El pelaje de los adultos, pardo, es más oscuro que el de los becerros, y se desarrolla sobre todo en la cabeza, hombros y cuello. Poseen una pequeña "barba" en la garganta, mientras que en las patas tienen el pelo corto (al contrario que el Bisonte americano). La cornamenta es propia de ambos sexos, y puede llegar a medir 50 centímetros. Habitan en los bosques espesos, templados y húmedos del este europeo.</string>
    <string name="bisonteConstumbres">El Bisonte Europeo vive en pequeños rebañospequeños rebaños escondidos de entre 10 y 30 individuos y, pese a su pesada apariencia, es muy veloz. Eso le sirve para defender con fiereza a sus terneros de los ataques de osos y lobos. Igualmente, son buenos nadadores y disfrutan mucho sumergiéndose en los pantanos. Entre agosto y septiembre tiene lugar la época de celo, tras la cual se sucede la gestación, que dura entre 260 y 270 días. Las hembras paren una sola cría, alejándose antes para dar a luz. Son mamíferos herbívoros.</string>
    <string name="bisonteSabias">La Primera Guerra Mundial por poco acaba con esta especie. Al término de la contienda apenas quedaban 60 ejemplares de bisonte en todo el continente.</string>
    <string name="bisontePeso">300–920 kg</string>
    <string name="bisonteTamaño">150–200 cm</string>
    <string name="guacamayo">GUACAMAYO ROJO DE ALAS VERDES</string>
    <string name="guacamayoQuien">El Guacamayo rojo de alas verdes, o Guacamayo "aliverde", posee un magnífico plumaje y forma parte de la gran familia de los denominados "loros". Su nombre científico, "Ara", responde al sonido que emite esta ave, típica de las selvas tropicales que van desde México hasta Brasil. El Guacamayo rojo reside en las proximidades de sitios donde hay agua, y está amenazado debido a la destrucción de su hábitat (el comercio ilegal amenaza su supervivencia). Son bastantes grandes y atraen la atención por su vívido y espectacular colorido, y su llamado estridente con el que se comunican durante el vuelo. Los ejemplares jóvenes se parecen a los adultos, pero tienen la cola más corta.</string>
    <string name="guacamayoCostumbres">El Guacamayo rojo vive en pequeños grupos o bien en pareja, con la que construye sus nidos en época de celo. El lugar escogido son los huecos de los árboles, de difícil acceso para los predadores. Los huevos los incuba la hembra, si bien el cuidado de los polluelos corresponde a ambos sexos. Las crías se emancipan una vez que aprenden a volar. Su alimentación se basa en frutas variadas, semillas, nueces y bayas.</string>
    <string name="guacamayoSabias">Son aves dóciles y sociables, de ahí que se adapten fácilmente a la vida de los hogares (aunque, al igual que ocurre con otras aves de su especie, suelen centrar su cariño en una sola persona).</string>
    <string name="guacamayoPeso">1000–1350 gr</string>
    <string name="guacamayoTamaño">82–120 cm</string>
    <string name="ibis">IBIS SAGRADO</string>
    <string name="ibisQuien">El Ibis Sagrado posee plumaje blanco y negro en la cabeza y la cola. Su nombre se debe al dios Thot, al que encarnaba (de ahí que se le domesticara para permanecer en templos y parques, donde los antiguos egipcios le rendían culto). Cuando moría era momificado y recibía sepultura. Hoy en día, sin embargo, es un ave desaparecida de Egipto. Se encuentra principalmente en las corrientes y zonas lacustres del sur de África y Asia. Se alimenta principalmente de insectos y lombrices, además de crustáceos y pequeños reptiles, a los que captura con su largo pico curvo.</string>
    <string name="ibisCostumbres">El ibis es un animal carnívoro, su dieta es muy parecida a la de las cigüeñas o los marabúes. Se alimenta de insectos y lombrices, además de crustáceos y pequeños reptiles, a los que captura con su largo pico. Ave diurna y gregaria, habita en las orillas de los ríos, lagos y aguas estancadas. Es capaz de formar en ocasiones colonias muy numerosas. Construye los nidos sobre los árboles, donde nacen los polluelos (blancos, a excepción de cuello y cabeza, negros y sin plumas). La incubación dura unos 28 o 29 días y es efectuada por los dos miembros de la pareja.</string>
    <string name="ibisSabias">Las crías del Ibis Sagrado abandonan el nido a los 20 días de nacer para reunirse en una especie de guardería. Antes del segundo mes de vida adquieren su independencia.</string>
    <string name="ibisPeso">1,5 kg</string>
    <string name="ibisTamaño">65–80 cm</string>
    <string name="lince">LINCE IBÉRICO</string>
    <string name="linceQuien">El lince ibérico es el felino más grade del sur de Europa y el más amenazado del Planeta. Es una especie endémica de la Península Ibérica y originalmente distribuida por toda ella. Actualmente su población se compone de 404 ejemplares, lo que ha permitido que pase de estar clasificada como "en peligro crítico" a "en peligro". Esbelto y de patas largas (82–103cm de longitud y 36–55cm de altura), es inconfundible por sus barbas y los pinceles negros a la punta de sus orejas. El pelaje es de color pardo con manchas oscuras de tamaño y densidad variable según los individuos. La cola corta es característica de todos los linces del mundo.</string>
    <string name="linceCostumbres">Las hembras crían una vez al año y no todos los años. Los partos tienen lugar entre marzo y abril, tras aproximadamente dos meses de gestación. Las crías son poco móviles y mantienen los ojos cerrados durante los primeros 12 días de vida. Pueden nacer hasta cuatro cachorros. El conejo supone más del 90% de su alimentación, si bien ocasionalmente, puede capturar otras presas como ciervos, gamos, perdices, micromamíferos y aves acuáticas. Los linces son solitarios y territoriales. Defienden con exclusividad el centro de su área de campeo ante individuos subadultos o adultos del mismo sexo.</string>
    <string name="linceSabias">Aunque se parece a un gato grande, se relaciona más con un león de pequeño tamaño.</string>
    <string name="lincePeso">9,4–13 kg</string>
    <string name="linceTamaño">82–103 cm</string>
    <string name="lobo">LOBO GRIS</string>
    <string name="loboQuien">Tundras y regiones polares son el hábitat del lobo gris, mamífero emparentado con nuestro perro doméstico, los chacales, el dingo australiano o el zorro. Aunque se dice que el lobo gris es muy parecido, sobre todo, al husky siberiano. De pelaje largo y blanco, presenta también tonos grisáceos en el dorso. Se distribuye por Groenlandia y las islas árticas de Canadá.</string>
    <string name="loboCostumbres">El Lobo Ártico abarca vastos territorios para encontrar la comida que necesita, de ahí que delimite con aullidos y marcas olorosas su zona. La estructura social de la manada está fuertemente jerarquizada y dirigida por una pareja. Se trata del macho y la hembra alfas, quienes suelen ser los únicos que procrean. Son quienes toman las decisiones en torno a las actividades del grupo: la caza, qué individuo come primero, a quién se le permite procrear, etcétera. La madre da a luz a dos o tres crías a finales de mayo o principios de junio, tras una gestación de aproximadamente 63 días. Los cachorros no se emancipan de la hembra hasta los dos años.</string>
    <string name="loboSabias">Las poblaciones de lobos polares se han recuperado un poco en los últimos años, aunque siguen estando amenazadas. La caza, la pérdida del hábitat, los atropellos, los envenenamientos, la falta de presas… Son las causas de este declive. Parientes suyos como el Lobo Ibérico se enfrentan a problemas similares.</string>
    <string name="loboPeso">63–78 kg</string>
    <string name="loboTamaño">1–2 m</string>
    <string name="loris">LORIS ARCO IRIS</string>
    <string name="lorisQuien">Existen al menos 22 subespecies conocidas de Loris Arco Iris, diferenciadas entre sí por el color de la cabeza, nuca y pecho. El color que predomina en el robusto cuerpo de esta ave es el verde: en la espalda, obispillo y la cola puntiaguda. El pico de los ejemplares jóvenes es de color marrón oscuro (el de los adultos, anaranjado o rojo). Cuando vuela, el loris despliega sus brillantes alas y chilla mucho. Mientras se alimenta, en cambio, el loris arcoiris es silencioso (tanto es así que llega a pasar inadvertido entre la vegetación, dado su plumaje verde). Dentro de las islas de su área de distribución, y dada la ausencia de depredadores, ha adoptado una forma de vida preferentemente terrestre.</string>
    <string name="lorisCostumbres">Normalmente vive en grandes bandadas ya que es un animal sociable capaz de formar grupos mixtos con otras especies. Se alimenta sobre todo de néctar, frutas maduras, flores e insectos (alimentos blandos, ricos en proteínas y vitaminas). Su propia lengua, con forma de escobilla, se ha adaptado a esta dieta: usa el pico para aplastar la pulpa de la fruta y extraer el jugo y las semillas. No existe dimorfismo sexual aparente, y solamente la hembra incuba los huevos durante unos 27 días, aunque el nido es preparado por ambos sexos, que se ocupan por igual de alimentar las crías. Éstas se marchan del nido a las ocho semanas de nacer.</string>
    <string name="lorisSabias">Los nidos del Loris Arco Iris suelen encontrarse en huecos de madera podrida, así como en las ramas extremas de los eucaliptos. La puesta oscila entre los tres y cuatro huevos, y se produce en intervalos de uno o dos días.</string>
    <string name="lorisPeso">116–142 gr</string>
    <string name="lorisTamaño">26 cm</string>
    <string name="nutria">NUTRIAS GIGANTES DE AMAZONAS</string>
    <string name="ave">Ave</string>
    <string name="carnivoro">Carnívoro</string>
    <string name="africa">Africa</string>
    <string name="lc">PREOCUPACIÓN <br />MENOR</string>
    <string name="formularioIncidencia">FORMULARIO DE INCIDENCIAS</string>
    <string name="seleccione">SELECCIONE</string>
    <string name="btnCancelar">CANCELAR</string>
</resources>